# fiap-fase1-tech-challenge

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  fix_db.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
.plan/: Guia de Execução Etapa 1 - EDA & Baseline.md  Guia de Execução Etapa 2 - Modelagem MLP & MLOps.md  Guia de Execução Etapa 3 - Engenharia, API e Qualidade.md  Planejamento Tech Challenge - Fase 1.md  check_etapa_3.md  estrutura_remota_github.md  mudancas.md  registro_pendencia_etapa_2.md  resumo_etapa1.md  textbook.md
docs/: PosTech-Fase_1-7.TechChallenge - Enunciado.md  comparativo_triade_modelos.md  memoria_desenvolvimento.md  ml_canvas.md  model_card.md  monitoring_playbook.md  plano_monitoramento.md  roteiro_pitch.md
docs/adr/: ADR-001-Escolha-do-Framework-API.md  ADR-002-Estrategia-de-Validacao-de-Dados.md
infra/terraform/: main.tf
notebooks/: 01_eda_churn.ipynb  02_MLP_Modelagem_Churn.ipynb  README.md  mlflow.db
notebooks/.ipynb_checkpoints/: 01_EDA_Telco_Churn-checkpoint.ipynb
src/api/: main.py
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: benchmark_linear.py  benchmark_tree.py  dataset.py  evaluate_comparison.py  network.py  predict_model.py  train_model.py
src/schemas/: churn_schema.py
src/utils/: financial.py  logging_config.py  seed_config.py
tests/: conftest.py  create_dummy_data.py  create_dummy_preprocessor.py  create_raw_dummy.py  test_api.py  test_schemas.py
